--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,24 +1,24 @@
 /**app.wxss**/
 @import './weui-miniprogram/weui-wxss/dist/style/weui.wxss';
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-} 
+}
 
 button {
   background: initial;
 }
 
-button:focus{
+button:focus {
   outline: 0;
 }
 
-button::after{
+button::after {
   border: none;
 }
-
 
 page {
   background: #f6f6f6;
@@ -154,4 +154,19 @@ page {
   font-size: 24rpx;
   line-height: 36rpx;
   word-break: break-all;
+}
+
+.primary-btn {
+  background-color: #2f3542;
+  color: white;
+}
+
+.primary-btn-1 {
+  background-color: #57606f;
+  color: white;
+}
+
+.primary-btn-2 {
+  background-color: #a4b0be;
+  color: white;
 }
